--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,13 @@
         <module>spider-java</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
